updated POM file, and conncted mvn with testng.xml runner file